# demo-process-observability

./: .gitignore  README.md  config.yml  pyproject.toml
config/: clients.yml  ingestion.secrets.example.json  ingestion.yml  process_catalog.yml  workflow_aliases_override.yml
docs/: report.md
notebooks/: debug_steps.ipynb  debug_steps_v2.ipynb  debug_steps_v3.ipynb  debug_steps_v4.ipynb  debug_steps_v5.ipynb  load_instances.ipynb  reconciliation_role_counts.ipynb
scripts/: merge_client_datasets.py
src/demo/: cli.py
src/demo/catalog/: canonicalize.py  compiler.py  loader.py  normalize.py  types.py
src/demo/dashboard/: __init__.py  app.py  data.py  review_store.py  ui.py
src/demo/dashboard/utils/: io.py
src/demo/dashboard/views/: instance_detail.py  portfolio.py  process_grid.py  run_summary.py  workflow_store.py
src/demo/ingestion/: config.py  gmail_api.py  manifest.py  models.py  normalize.py  run.py  slack_api.py  write.py
src/demo/io/: load_raw.py  normalize.py
src/demo/llm/: client.py  types.py
src/demo/llm/prompts/: pass1_event_extraction.md  pass1_event_extraction_legacy.md
src/demo/pipeline/: pass1.py  pass2.py  reconciliation.py  stage3_postprocess.py
src/demo/schemas/: messages.py
src/demo/utils/: json_utils.py
tests/: test_canonicalize_process.py  test_catalog_loaders.py  test_ingestion_window_and_utils.py  test_match_step.py  test_merge_client_datasets.py  test_phase_b_canonical_fields.py  test_phase_b_health.py  test_phase_b_steps_state.py  test_reconciliation.py  test_stage3_fix.py  test_unified_catalog.py
